# wistra

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  wistra-plan.md
doc/: adr-001-cli-commands.md  adr-002-serve-scope.md  arch-adapter.md  arch-planner.md  spec-clean.md  spec-cli-commands.md  spec-dedup.md  spec-import.md  spec-serve.md  spec-wiki-format.md
docs/: index.md
docs/superpowers/plans/: 2026-04-05-serve-ui-redesign.md
docs/superpowers/specs/: 2026-04-05-serve-ui-redesign-design.md
src/: main.rs
src/adapter/: claude.rs  mod.rs
src/cli/: config.rs  cron.rs  mod.rs  onboard.rs
src/config/: mod.rs  types.rs
src/importer/: frontmatter.rs  mod.rs  parser.rs
src/planner/: interest.rs  mod.rs  priority.rs
src/scanner/: graph.rs  meta.rs  mod.rs  parser.rs  report.rs
src/serve/: exporter.rs  mod.rs  renderer.rs  templates.rs
src/types/: mod.rs
src/writer/: document.rs  linker.rs  mod.rs
