[package]
name = "wistra"
version = "0.1.0"
edition = "2021"
description = "AI-powered personal wiki builder"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"
regex = "1"
indicatif = "0.17"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
async-trait = "0.1"
shellexpand = "3"
