[package]
name = "wistra"
version = "0.1.5"
edition = "2021"
authors = ["0010capacity"]
description = "AI-powered personal wiki builder"
license = "MIT"
repository = "https://github.com/0010capacity/wistra"
readme = "README.md"
keywords = ["wiki", "ai", "markdown", "cli", "knowledge-graph"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"
regex = "1"
indicatif = "0.17"
dialoguer = "0.11"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
async-trait = "0.1"
shellexpand = "3"
rand = "0.8"
secrecy = { version = "0.8", features = ["serde"] }
strsim = "0.11"
pulldown-cmark = "0.10"
warp = "0.3"
mime_guess = "2"
urlencoding = "2.1"
